--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle Jump</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
 </head>
 <body>
-    <div class="grid"></div>
+    <div class="gameArea">
+        <div class = "test"></div>
+    </div>
+    <script src="Platform.js"></script>
+    <script src="Player.js"></script>
+    <script src="Game.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
